# tarantool-cartridge-rust-training-project

./: .gitignore  Cargo.toml  Makefile  README.md  init.lua  instances.yml  replicasets.yml
app/: data_fetcher.lua  router.lua  storage.lua
app/roles/: custom.lua  data_fetcher_role.lua  router_role.lua  storage_role.lua  weather.lua
rust/: Cargo.toml
rust/src/: data_fetcher.rs  dto_api.rs  dto_data_fetcher.rs  dto_storage.rs  lib.rs  router.rs
rust/src/data_fetcher/: coordinates.rs  dto.rs  mod.rs  settings.rs  weather.rs
rust/src/storage/: dto.rs  mod.rs  place_storage.rs  weather_storage.rs
test/: helper.lua  k6-test.js  requests.http
test/integration/: api_test.lua
test/unit/: data_fetcher_apply_config_test.lua  router_apply_config_test.lua
