[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tarantool = "10.0.0"
tlua = "7.0.0"
shors = "0.12.5"
form_urlencoded = "1.2.2"
serde = "1.0.228"
log = "0.4.28"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
serde_json = "1.0.104"
fibreq = "0.2.1"

[lib]
crate-type = ["cdylib"]